Add plugin importing from main